# the-grid

./: .gitignore  CHANGELOG.md  Cargo.toml  Docfile  PUBLISHING.md  README.md  arch.md  calculator.cpp  commandideas.md  concept.md  config.toml  devlog.md  error.md  master.yaml  spec.txt  todo.md
.docgen/: docgen_config.json  tree.json
.github/workflows/: ci.yaml
.theory/: 1.0.0roadmap.md  Core.md  OS.md  applications.md  digital_dna.md  gap.md  gs.md  improvements.md  key_features.md  paper.md  scheduler.md  vfs.md
deprecated/: simulation.py
ideas/: OS.md  OSideas.md  README.md  ideas for 0.2.0.md
sandbox/: Makefile  app.yaml
src/: ag_parser.rs  agent.rs  agent_blueprint.rs  ai_provider.rs  app.rs  arena.rs  config.rs  database.rs  event.rs  filesystem.rs  gridshell.rs  main.rs  pipeline.rs
sys/: analyze.ag  implement.ag  think.ag
sys/sbin/: analyze.ag  implement.ag  think.ag
test/: app.txt  test.txt
