[package]
name = "the-grid"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
rand = "0.8"
eframe = "0.27"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
whoami = "1.5"
serde_json = "1.0"
toml = "0.8"
rusqlite = { version = "0.31", features = ["serde_json", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"
egui = "0.27.2"
uuid = { version = "1.0", features = ["v4", "serde"] }